games/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: games-service
  namespace: games
spec:
  selector:
    app: kaayaka-games
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
