games/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: games-routes
  namespace: games
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-system
      sectionName: https
  hostnames:
    - "games.kaayaka.in"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: games-service
          port: 3000
